--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,11 @@
     "tests"
   ],
   "dependencies": {
+    "masonry": "~3.1.5",
     "jquery": "~2.1.1",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "bootswatch": "~3.2.0+2",
+    "superagent": "~0.18.2",
+    "isotope": "~2.0.0"
   }
 }
